UScript.Parser/obj/Debug/UScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\mattias\Documents\Visual Studio 2015\Projects\UScript\UScript.Parser\UScript.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace UScript.Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class UScriptParser : Parser {
	public const int
		T__42=1, T__41=2, T__40=3, T__39=4, T__38=5, T__37=6, T__36=7, T__35=8, 
		T__34=9, T__33=10, T__32=11, T__31=12, T__30=13, T__29=14, T__28=15, T__27=16, 
		T__26=17, T__25=18, T__24=19, T__23=20, T__22=21, T__21=22, T__20=23, 
		T__19=24, T__18=25, T__17=26, T__16=27, T__15=28, T__14=29, T__13=30, 
		T__12=31, T__11=32, T__10=33, T__9=34, T__8=35, T__7=36, T__6=37, T__5=38, 
		T__4=39, T__3=40, T__2=41, T__1=42, T__0=43, TYPE_BYTE=44, TYPE_INT=45, 
		TYPE_FLOAT=46, TYPE_STRING=47, TYPE_CHAR=48, NAME=49, NORMALSTRING=50, 
		CHARSTRING=51, LONGSTRING=52, INT=53, HEX=54, FLOAT=55, HEX_FLOAT=56, 
		COMMENT=57, LINE_COMMENT=58, WS=59, SHEBANG=60;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'/'", "'def'", "'func'", "'true'", "'return'", "';'", "'{'", 
		"'>>'", "'<<'", "'..'", "'::'", "'}'", "'='", "'^'", "'<='", "'&'", "'('", 
		"'*'", "','", "'.'", "'false'", "':'", "'>='", "'['", "'|'", "'//'", "'=='", 
		"'~='", "'<'", "']'", "'~'", "'>'", "'or'", "'#'", "'%'", "'function'", 
		"'end'", "')'", "'and'", "'nil'", "'+'", "'not'", "'-'", "'Byte'", "'Int'", 
		"'Float'", "'String'", "'Char'", "NAME", "NORMALSTRING", "CHARSTRING", 
		"LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", 
		"WS", "SHEBANG"
	};
	public const int
		RULE_module = 0, RULE_block = 1, RULE_stat = 2, RULE_retstat = 3, RULE_label = 4, 
		RULE_funcname = 5, RULE_varlist = 6, RULE_namelist = 7, RULE_explist = 8, 
		RULE_exp = 9, RULE_prefixexp = 10, RULE_functioncall = 11, RULE_argList = 12, 
		RULE_varOrExp = 13, RULE_var = 14, RULE_varDecl = 15, RULE_varSuffix = 16, 
		RULE_nameAndArgs = 17, RULE_param = 18, RULE_type = 19, RULE_args = 20, 
		RULE_functiondef = 21, RULE_funcbody = 22, RULE_parlist = 23, RULE_tableconstructor = 24, 
		RULE_fieldlist = 25, RULE_field = 26, RULE_fieldsep = 27, RULE_operatorOr = 28, 
		RULE_operatorAnd = 29, RULE_operatorComparison = 30, RULE_operatorStrcat = 31, 
		RULE_operatorAddSub = 32, RULE_operatorMulDivMod = 33, RULE_operatorBitwise = 34, 
		RULE_operatorUnary = 35, RULE_operatorPower = 36, RULE_number = 37, RULE_string = 38;
	public static readonly string[] ruleNames = {
		"module", "block", "stat", "retstat", "label", "funcname", "varlist", 
		"namelist", "explist", "exp", "prefixexp", "functioncall", "argList", 
		"varOrExp", "var", "varDecl", "varSuffix", "nameAndArgs", "param", "type", 
		"args", "functiondef", "funcbody", "parlist", "tableconstructor", "fieldlist", 
		"field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
		"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise", 
		"operatorUnary", "operatorPower", "number", "string"
	};

	public override string GrammarFileName { get { return "UScript.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public UScriptParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ModuleContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(UScriptParser.Eof, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterModule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitModule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_module);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; block();
			State = 79; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 81; stat();
					}
					} 
				}
				State = 86;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			}
			State = 88;
			_la = _input.La(1);
			if (_la==T__38) {
				{
				State = 87; retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
	 
		public StatContext() { }
		public virtual void CopyFrom(StatContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ReturnStatementContext : StatContext {
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public ReturnStatementContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterReturnStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitReturnStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncCallStatementContext : StatContext {
		public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		public FuncCallStatementContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterFuncCallStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitFuncCallStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncCallStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FunctionDeclStatementContext : StatContext {
		public FuncnameContext name;
		public FuncnameContext funcname() {
			return GetRuleContext<FuncnameContext>(0);
		}
		public FuncbodyContext funcbody() {
			return GetRuleContext<FuncbodyContext>(0);
		}
		public FunctionDeclStatementContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterFunctionDeclStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitFunctionDeclStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VarDeclStatementContext : StatContext {
		public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		public VarDeclStatementContext(StatContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterVarDeclStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitVarDeclStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDeclStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_stat);
		try {
			State = 97;
			switch (_input.La(1)) {
			case T__40:
				_localctx = new FunctionDeclStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 90; Match(T__40);
				State = 91; ((FunctionDeclStatementContext)_localctx).name = funcname();
				State = 92; funcbody();
				}
				break;
			case T__41:
				_localctx = new VarDeclStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 94; varDecl();
				}
				break;
			case NAME:
				_localctx = new FuncCallStatementContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 95; functioncall();
				}
				break;
			case T__38:
				_localctx = new ReturnStatementContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 96; retstat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RetstatContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public RetstatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_retstat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterRetstat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitRetstat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRetstat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RetstatContext retstat() {
		RetstatContext _localctx = new RetstatContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_retstat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(T__38);
			State = 101;
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				State = 100; exp(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(UScriptParser.NAME, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(T__32);
			State = 104; Match(NAME);
			State = 105; Match(T__32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncnameContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(UScriptParser.NAME, 0); }
		public FuncnameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcname; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterFuncname(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitFuncname(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncname(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncnameContext funcname() {
		FuncnameContext _localctx = new FuncnameContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_funcname);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarlistContext : ParserRuleContext {
		public VarContext[] var() {
			return GetRuleContexts<VarContext>();
		}
		public VarContext var(int i) {
			return GetRuleContext<VarContext>(i);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterVarlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitVarlist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarlistContext varlist() {
		VarlistContext _localctx = new VarlistContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_varlist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; var();
			State = 114;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__24) {
				{
				{
				State = 110; Match(T__24);
				State = 111; var();
				}
				}
				State = 116;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamelistContext : ParserRuleContext {
		public ITerminalNode NAME(int i) {
			return GetToken(UScriptParser.NAME, i);
		}
		public ITerminalNode[] NAME() { return GetTokens(UScriptParser.NAME); }
		public NamelistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namelist; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterNamelist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitNamelist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamelist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamelistContext namelist() {
		NamelistContext _localctx = new NamelistContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_namelist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(NAME);
			State = 122;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__24) {
				{
				{
				State = 118; Match(T__24);
				State = 119; Match(NAME);
				}
				}
				State = 124;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExplistContext : ParserRuleContext {
		public ExpContext[] exp() {
			return GetRuleContexts<ExpContext>();
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public ExplistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_explist; } }
		public override void EnterRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.EnterExplist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IUScriptListener typedListener = listener as IUScriptListener;
			if (typedListener != null) typedListener.ExitExplist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUScriptVisitor<TResult> typedVisitor = visitor as IUScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExplist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExplistContext explist() {
		ExplistContext _localctx = new ExplistContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_explist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125; exp(0);
			State = 130;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__24) {
				{
				{
				State = 126; Match(T__24);
				State = 127; exp(0);
				}
				}
				State = 132;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
